Add all the models for eight classification

--- a/Two_classifications/6_Inception_Resnet_V2_Breakhis_Classification.ipynb
+++ b/Two_classifications/6_Inception_Resnet_V2_Breakhis_Classification.ipynb
@@ -74,6 +74,8 @@
    },
    "outputs": [],
    "source": [
+    "# !pip install pretrainedmodels\n",
+    "\n",
     "import torch\n",
     "from torch import nn, optim\n",
     "from torchvision import datasets ,transforms, models\n",
@@ -84,7 +86,7 @@
     "import time as evaltime\n",
     "from torch import nn\n",
     "from collections import OrderedDict\n",
-    "!pip install pretrainedmodels\n",
+    "\n",
     "import pretrainedmodels\n",
     "import tqdm\n",
     "from tqdm import tqdm\n",
